c2prj1_cards/grade.txt
Grading at Sat Jan  5 18:51:09 UTC 2019
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:42:5: error: expected ‘;’ before ‘}’ token
     } else if (val == VALUE_JACK){
     ^
Could not compile your card.c!

Overall Grade: FAILED
